--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@cacheable/node-cache": "^1.4.0",
+    "@cacheable/node-cache": "1.4.0",
     "@hapi/boom": "^9.1.3",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
@@ -71,7 +71,7 @@
     "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
     "sharp": "^0.34.1",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.27.9",
     "typescript": "^5.8.2"
